--- a/language/EN.json
+++ b/language/EN.json
@@ -1,54 +1,54 @@
 {
    "_ELISAJSON_": true,
-    "LANGUAGE": "English",
-    "LANGCODE": "EN",
+    "LANGUAGE": "Español",
+    "LANGCODE": "ES",
     "AUTHOR": "MR.NIMA",
   
   "STRINGS": {
         "elisabot": {
-            "COMMAND": "Command",
-            "DESC": "Description",
-            "EXAMPLE": "Example",
-            "NOT_FOUND": "*I couldnt find a command like this*",
-            "WARN": "Warn",
-            "NEXT_BUTTON" : "NEXT ▶",
-            "BACK_BUTTON" : "◀ BACK",
-            "STICKER_MAKING" : "*🤠 Creating your sticker...*",
-            "GROUP_CMD_DESC" : "Commands related to group administration",
-            "ALL_CMD" : "Show all commads",
-            "DOWNLOAD_CMD" : "Show Download commnds",
-            "SEARCH_CMD" :"show serach commands",
-            "IMAGE_CMD" :"show image commands",
-            "FUN_CMD" :"Show fun commands",
-            "CONVERT_CMD" :"Show Convert commands",
-            "RANDOM_ANIME" :"Show Random Anime Commands",
-            "MISC_CMD" :"Show simple commands",
-            "DATABASE_CMD" :"Show Database commands",
-            "LOGO_CMD" : "Show text to image ( logo maker ) command",
-            "VOICE_CMD" : "Show Voice Commands",
-            "ANONIMUS_CMD" :"Show Chat Command ",
-            "OWNER_CMD" :"Show Owner Commands",
-            "ABOUT_CMD" :"About Queen Elisa WA Bot",
-            "NOT_FOUND" : "*CAN/'T FINE ANYTHING* ❗",
-            "CONVER_TING" : "```Converting... 🤹‍♀️```",
-            "GET_PHOTO" : "```Your link is taking the photo...```",
-            "OWNER_REPORT" : "\n\nSuccessfully Reported To The Owner\n\nPlease Make Sure The Bug Is Valid",
-            "BLOCK" : "*⛔ Blocked user !*",
-            "UNBLOCK": "*✅ Unblock user !*",
-            "GROUP_NAME" : "*✅ Success chnage Group Name !*",
-            "GROUP_DES" : "*✅ Success Change Group description !*",
-            "KICK" : "```Remove from Group...```",
-            "ADD" : "```Add Group...```",
-            "PROMOTE" : "```Promote as Group admin```",
-            "DEMOTE" : "```Demote as Group member```",
-            "G_MUTE" : "```🔇 SUCCESS GROUP CLOSE```",
-            "G_UNMUTE" :"``` 🔊 SUCCESS GROUP OPEN ```",
-            "G_INFOON" :"*✅ SUCCESS CHANGE EDIT INFO OPEN.*",
-            "G_INFOOFF" : "*.✅ SUCCESS CHNAGE EDIT INFO CLOSE.*",
-            "DELETE": "*🧚💬 THIS MASSAGE IS NOT SEND BY BOT.*",
-            "BC_GC" : "*🧚💬 PLEASE GIVE ME A MASSAGE*\n",
-            "M_REPLY" :"*🧚💬 PLEASE REPLY MASSAGE.*",
-            "EXAMPLE" : "*🧚💬 EXAMPLE*"
+            "COMMAND": "Commando",
+            "DESC": "Descripción",
+            "EXAMPLE": "Ejemplo",
+            "NOT_FOUND": "*No pude encontrar un comando como este*",
+            "WARN": "Advertencia",
+            "NEXT_BUTTON" : "SIGUIENTE ▶",
+            "BACK_BUTTON" : "◀ ATRAS",
+            "STICKER_MAKING" : "*🖕 CREANDO TU STICKER...*",
+            "GROUP_CMD_DESC" : "Comandos relacionados con la administración de grupos",
+            "ALL_CMD" : "Mostrar todos los comandos",
+            "DOWNLOAD_CMD" : "Mostrar comandos de descarga",
+            "SEARCH_CMD" :"Mostrar comandos de Serach",
+            "IMAGE_CMD" :"Mostrar comandos de imagen",
+            "FUN_CMD" :"Mostrá todos los comandos inutiles",
+            "CONVERT_CMD" :"Mostrar comandos de conversión",
+            "RANDOM_ANIME" :"Mostrar comandos aleatorios de anime",
+            "MISC_CMD" :"Mostrar comandos sencillos",
+            "DATABASE_CMD" :"Mostrar comandos de base de datos",
+            "LOGO_CMD" : "Mostrar texto a imagen ( logo maker ) comandos",
+            "VOICE_CMD" : "Mostrar Comandos de voz",
+            "ANONIMUS_CMD" :"Mostrar comando de chat ",
+            "OWNER_CMD" :"Mostrar comandos de propietario",
+            "ABOUT_CMD" :"Acerca de Federico WA Bot",
+            "NOT_FOUND" : "*PUEDO / NO PUEDO MULTAR NADA* ❗",
+            "CONVER_TING" : "```Convirtiendo... ```",
+            "GET_PHOTO" : "```Tu enlace está tomando la foto...```",
+            "OWNER_REPORT" : "\n\nExitosamente reportado al propietario\n\nPor favor, asegúrese de que el error es válido",
+            "BLOCK" : "*⛔ Usuario bloqueado !*",
+            "UNBLOCK": "*✅ Desbloquear usuario !*",
+            "GROUP_NAME" : "*✅ Cambio correcto Nombre del grupo !*",
+            "GROUP_DES" : "*✅ Descripción del grupo Cambio de éxito !*",
+            "KICK" : "```Quitar del grupo...```",
+            "ADD" : "```Agregar grupo...```",
+            "PROMOTE" : "```Promover como administrador de grupo```",
+            "DEMOTE" : "```Disminuir el nivel como miembro del grupo```",
+            "G_MUTE" : "```🔇 CIERRE DE GRUPO```",
+            "G_UNMUTE" :"``` 🔊 GRUPO ABIERTO ```",
+            "G_INFOON" :"*✅ CAMBIAR INFO ABIERTO.*",
+            "G_INFOOFF" : "*.✅ CAMBIAR INFO CERRADO.*",
+            "DELETE": "*🐶💬 ESTE MASAJE NO ES ENVIADO POR BOT.*",
+            "BC_GC" : "*🐶💬 POR FAVOR, DAME UN MASAJE*\n",
+            "M_REPLY" :"*🐶💬 POR FAVOR, RESPONDA AL MASAJE.*",
+            "EXAMPLE" : "*🐶💬 EJEMPLO*"
         }
     }
 }
